feat: adds media query for save to collection moda @ max width 600px

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1400,6 +1400,10 @@ footer .big-footer {
     .tweet-image img, .collection-tweet-image img {
         height: 160px;
     }
+
+    .save-to-collection-prompt {
+        width: 80vw;
+    }
 }
 
 
