feat: adds markup for forgot password

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -382,10 +382,33 @@ header {
 
 }
 
-.login-div, .signup-div {
+.login-div, .signup-div, .forgot-password-div {
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+.forgot-password-div {
+    position: absolute;
+    top: 0px;
+    bottom: 0px;
+    width: 320px;
+    height: 350px;
+    left: 0px;
+    right: 0px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: var(--bg);
+    border: 1px solid white;
+    border-radius: 15px;
+}
+
+.forgot-password-message {
+    font-weight: 400;
+    font-size: 0.8rem;
+    margin-top: 15px;
 }
 
 .login-from-modal {
