feat: adds function to truncate long usernames

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -734,8 +734,22 @@ header {
     font-weight: 700;
 }
 
+.tweet-name {
+    cursor: pointer;
+    border-bottom: 1px solid transparent;
+}
+
+.tweet-name:hover, .tweet-name:active {
+    border-bottom: 1px solid var(--blue-hover);
+}
+
 .tweet-username, .tweet-time, .collection-tweet-username, .collection-tweet-time {
     color: var(--grey-font);
+}
+
+.tweet-time {
+    /* display: none; */
+    text-align: right;
 }
 
 .tweet-text, .collection-tweet-text {
@@ -1460,11 +1474,11 @@ footer .big-footer {
 
 
     .tweet-name-div, .tweet-text {
-        font-size: 0.8rem;
+        font-size: 0.9rem;
         flex-wrap: nowrap;
     }
     .tweet-footer {
-        font-size: 0.6rem;
+        font-size: 0.7rem;
         width: 290px;
         width: 80vw;
     }
