--- a/src/css/main.css
+++ b/src/css/main.css
@@ -545,7 +545,7 @@ header {
     flex-direction: column;
     align-items: center;
 
-    height: Calc(100vh - 50px);
+    /* height: Calc(100vh - 50px); */
     overflow-y: scroll;
     overflow-x: hidden;
     transition: 0.25s;
@@ -1417,7 +1417,7 @@ footer .big-footer {
 
     .center-container {
         margin: 0px;
-        height: Calc(100vh - 50px);
+        /* height: Calc(100vh - 50px); */
     }
 
     .home-search-page, .timeline-search-page {
