feat: adds functionality to show images and videos only when there is no content blocker
the profile images are replaced with twitter's default
and other kinds of media are left out.
There is also a text to let the user know what is going on

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1605,8 +1605,15 @@ footer .big-footer {
     color: var(--red) !important;
     font-weight: 400;
     font-size: 0.9rem;
-    margin-top: -15px;
-    margin-bottom: 20px;
+    margin: -15px 0px 10px 0px;
+}
+
+.media-error {
+    font-size: 0.7rem;
+    text-align: center;
+    margin-top: -20px;
+    margin-bottom: 10px;
+    width: 90%;
 }
 
 .auth-error {
