feat: adds animation to media modal exit

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -170,6 +170,7 @@ button:hover, button:active {
 }
 
 .media-modal {
+    transition: .25s;
     /* position: relative; */
     display: flex;
     justify-content: center;
