modifies media modal function

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1304,6 +1304,7 @@ footer .big-footer {
 
     .side-nav-container {
         z-index: 50;
+        /* z-index: 18; */
         position: fixed;
         display: flex;
         align-items: center;
